Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ button.white {
 }
 
 body {
-    /* width: 100%; */
+    width: 100%;
     overflow-x: hidden !important ;
 }
 
@@ -584,11 +584,15 @@ footer .follow .copyright {
         justify-content: flex-start;
         position: fixed;
         top: 0;
-        right: 0px;
+        right: -300px;
         height: 100vh;
-        width: -200px;
+        width: 300px;
         background-color: #E3E6F3;
         box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
         padding: 80px 0 0 10px;
+    }
+
+    #navbar li {
+        margin-bottom: 20px;
     }
 }
